Commited changes to files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
+            <img src="assets/logo1.png">
             <a href="#">Afzal Haziq</a>
         </div>
         <div class="nav-links">
@@ -81,32 +81,30 @@
                     <div class="year-badge">2023</div>
                     <h4>JavaScript</h4>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                    aliquam illo maxime.</p>
+                <p>Stay Ahead of the Forecast: Your Essential Weather Companion, Anywhere, Anytime.</p>
             </div>
         </div>
         <div class="item">
-            <img src="assets/item-2.jpg">
+            <img src="assets/signin.png">
+            <img src="assets/signup.png">
             <div class="details">
                 <h3>Designing Login Form</h3>
                 <div class="item-info">
                     <div class="year-badge">2023</div>
                     <h4>Login Design</h4>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                    aliquam illo maxime.</p>
+                <p>Unlock Your World: Seamless Access, Secure Connections, Your Gateway to Exclusive Experiences.</p>
             </div>
         </div>
         <div class="item">
-            <img src="assets/item-3.jpg">
+            <img src="assets/musicplayerplatform.png">
             <div class="details">
                 <h3>Music Platform UI</h3>
                 <div class="item-info">
                     <div class="year-badge">2024</div>
                     <h4>UI Design</h4>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                    aliquam illo maxime.</p>
+                <p>Feel the Beat, Hear the Difference: JusVibes - Your Ultimate Soundtrack to Life's Moments.</p>
             </div>
         </div>
     </div>
