--- a/single-work.html
+++ b/single-work.html
@@ -13,7 +13,7 @@
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
+            <img src="assets/logo1.png">
             <a href="#">Afzal Haziq</a>
         </div>
         <div class="nav-links">
