--- a/works.html
+++ b/works.html
@@ -13,8 +13,8 @@
 
     <nav>
         <div class="logo">
-            <img src="assets/logo.png">
-            <a href="#">AsmrProg</a>
+            <img src="assets/logo1.png">
+            <a href="#">Afzal Haziq</a>
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
@@ -37,57 +37,38 @@
                         <div class="year-badge">2023</div>
                         <h4>JavaScript</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>A sleek and intuitive weather app designed to keep you informed no matter where you are. With just a 
+                        few clicks, users can effortlessly search for weather updates in any country, receiving instant access 
+                        to essential metrics such as temperature, humidity, and wind speed.</p>
                 </div>
             </div>
             <div class="item">
-                <img src="assets/item-2.jpg">
+                <img src="assets/signin.png">
+                <img src="assets/signup.png">
                 <div class="details">
                     <h3>Designing Login Form</h3>
                     <div class="item-info">
                         <div class="year-badge">2023</div>
                         <h4>Login Design</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>A seamless sign-in and sign-up page designed with simplicity and security in mind. Whether you're a new 
+                        user looking to join our community or a returning member eager to access exclusive features, this intuitive 
+                        interface makes the process a breeze. Experience hassle-free authentication and registration, all in one convenient platform.</p>
                 </div>
             </div>
             <div class="item">
-                <img src="assets/item-3.jpg">
+                <img src="assets/musicplayerplatform.png">
                 <div class="details">
                     <h3>Music Platform UI</h3>
                     <div class="item-info">
                         <div class="year-badge">2024</div>
                         <h4>UI Design</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Introducing JusVibes, where melody meets technology. Dive into a world of rhythm and sound with seamless 
+                        playback and personalized playlists tailored to your taste. Whether you're discovering new tracks or 
+                        rediscovering old favorites, this platform offers a dynamic audio experience like no other.</p>
                 </div>
             </div>
-            <div class="item">
-                <img src="assets/item-4.jpg">
-                <div class="details">
-                    <h3>JavaScript Charts</h3>
-                    <div class="item-info">
-                        <div class="year-badge">2023</div>
-                        <h4>JavaScript</h4>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="assets/item-5.jpg">
-                <div class="details">
-                    <h3>Speech To Text</h3>
-                    <div class="item-info">
-                        <div class="year-badge">2023</div>
-                        <h4>JavaScript</h4>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
-                </div>
             </div>
         </div>
     </div>
