Changes made to files

--- a/works.html
+++ b/works.html
@@ -69,6 +69,20 @@
                         rediscovering old favorites, this platform offers a dynamic audio experience like no other.</p>
                 </div>
             </div>
+            <div class="item">
+                <img src="assets/personalportfolio.png">
+                <div class="details">
+                    <h3>Personal Portfolio</h3>
+                    <div class="item-info">
+                        <div class="year-badge">2024</div>
+                        <h4>Website</h4>
+                    </div>
+                    <p>Welcome to my digital sanctuary, where creativity meets innovation. Explore my curated portfolio of 
+                        projects, designs, and passions, crafted with precision and fueled by curiosity. Dive into my 
+                        professional journey, featuring both my work experience and educational background, showcasing a 
+                        commitment to lifelong learning and growth. Join me in celebrating the art of creation and the 
+                        endless possibilities of the digital realm.</p>
+                </div>
             </div>
         </div>
     </div>
