Changes made to files

--- a/single-work.html
+++ b/single-work.html
@@ -50,6 +50,8 @@
 
         <p>An Arduino-based sensor system to collect CO2, Temperature, and Humidity data.</p>
 
+        <img src="assets/hardware.png">
+
         <div class="work-info">
             <div class="year-badge">Part 3</div>
             <div class="category">
@@ -59,8 +61,22 @@
 
         <p>Notification system that sends alerts to farmers' Telegram and Email accounts based on predefined threshold conditions.</p>
 
+        <img src="assets/notification.png">
+
         <div class="work-info">
             <div class="year-badge">Part 4</div>
+            <div class="category">
+                <p>Additional Features</p>
+            </div>
+        </div>
+
+        <p>Display weather function for user efficiency and a virtual assistant/chatbot to answer all the possible queries.</p>
+
+        <img src="assets/feature1.png">
+        <img src="assets/feature2.png">
+
+        <div class="work-info">
+            <div class="year-badge">Part 5</div>
             <div class="category">
                 <p>Cloud Integration for Remote Data Access & Management</p>
             </div>
