Changes made to files

--- a/works.html
+++ b/works.html
@@ -19,8 +19,8 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a class="selected" href="works.html">Works</a>
-            <a href="single-work.html">FYP</a>
-            <a href="blog.html">Background</a>
+            <a href="fyp.html">FYP</a>
+            <a href="background.html">Background</a>
             <a href="about.html">About</a>
         </div>
     </nav>
